# opencv

./: README  README.markdown  README.md  cvfilter2d.c  cvfilter2d.py  haarclassifier.py
colormaps/: CMakeLists.txt  LICENSE  README.md  colormap.cpp  colormap.hpp  helper.cpp  helper.hpp  main.cpp
eigenfaces/: CMakeLists.txt  Eigenfaces.cpp  Eigenfaces.h  README.markdown  at.txt  eigenfaces.cpp  eigenfaces.hpp  helper.cpp  helper.hpp  main.cpp
eigenfaces/include/: eigenfaces.hpp  helper.hpp
eigenfaces/src/: eigenfaces.cpp  helper.cpp  main.cpp
lbp/: CMakeLists.txt  histogram.cpp  histogram.hpp  lbp.cpp  lbp.hpp  main.cpp
lda/: CMakeLists.txt  README.markdown  fisherfaces.cpp  fisherfaces.hpp  helper.cpp  helper.hpp  main.cpp  subspace.cpp  subspace.hpp
lda/include/: decomposition.hpp  fisherfaces.hpp  helper.hpp  subspace.hpp
lda/src/: fisherfaces.cpp  helper.cpp  main.cpp  subspace.cpp
machinelearning/: CMakeLists.txt  alphadin.bst  machinelearning.tex
machinelearning-src/: main.cpp
machinelearning/bib/: machinelearning.bib
machinelearning/chapters/: evaluation.tex  introduction.tex  mlp.tex  svm.tex
machinelearning/doc/: machinelearning.tex  sigplan-proc-varsize.cls
machinelearning/doc/chapters/: data.tex  introduction.tex  mlp.tex  setup.tex  svm.tex
machinelearning/doc/section/: data.tex  evaluation.tex  installation.tex  introduction.tex  mlp.tex  svm.tex
misc/: CMakeLists.txt  pca_demo.cpp  skin_color.cpp  tan_triggs.cpp
random_hacks/: extract_contours.cpp
svm/: CMakeLists.txt  main.cpp
